<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Psychometric</string>
    <string name="scenatio_title">Scenario 1:</string>
    <string name="situation_title">Situation 1:</string>
    <string name="answers_title">Answers 1:</string>
    <string name="action_settings">Psychometric Test</string>


    <string name="scenario_text">You are a Human Resources (HR) Assistant working in the HR Department of a busy NHS Hospital Trust. The hospital is the Princess Aurora General in Saldringham City.
Your role is to carry out administrative tasks to support the HR activities required in the Trust. You organise and support recruitment, book training courses, provide secretarial support at disciplinary investigations and keep personnel records for all medical and non-medical staff up to date including pay and conditions information.
You report to one of two HR Managers who in turn report to the HR Director. Your manager is called Fiona Potter.</string>


    <string name="situation_text">It is three days after an interview process was held to appoint a new Consultant Ophthalmologist for the hospital. This Consultant will be the most senior medical person in the Ophthalmology (eye) department and in charge of three Senior Registrars, two Registrars and Two House Officers – these are all junior doctors. Consultant posts are rarely available as once people gain such a post they often stay until they retire and there is lots of competition to gain a medical post at the Trust, let alone a Consultant post with its associated security, status and generous pay.
Two internal; candidates plus an external candidate were interviews for the post and the role was given to one of the internal candidates. The person appointed was less experienced, in terms of their years as a Senior Registrar, than the other two candidates but they were considered to be more ‘high-flying’, academically gifted and to possess more impressive leadership skills than the other two.
Mr Brian Bowler, the internal rejected candidate, has come to your office this morning and is complaining bitterly about the decision. You were the one who wrote the letters informing candidates of the decision. Mr Bowler is angry and feels unfairly treated as he has more experience than Vijay Singh, the appointed candidate.
Review the following responses A to D and indicate whether you believe the response to be  1 – the most effective response, 2 – the second most effective response, 3 – the third most effective response or 4 – the least effective response. You may assign each rating only once.</string>

    <string-array name="answer_texts">
        <item>A - Tell Mr Bowler that the process was fair and the hospital has to make sure that it appoints the right person for the job, and not the one who has been around for the longest.</item>
        <item>B - Say that the interview board felt that Mr Singh was better academically and had better leadership skills and that the final decision was not based on experience alone.</item>
        <item>C – Say to Mr Bowler that you can see why he is disappointed. State that the process was stringently fair and that he could seek full details of the reason for the decision and other developmental feedback from the interviews if he would like to/</item>
        <item>D – Offer him a cup of tea and say that you can understand why he is upset. Let him have a bit of a moan to you and get it out of his system.</item>

    </string-array>

</resources>
