
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="412dp"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.89">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView android:text="@string/scenatio_title" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dsds"
                android:textSize="20dp"
                android:textColor="#ff000234" />

            <TextView
                android:text="@string/scenario_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_scenatio_text"
                android:layout_below="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1.03" />

            <TextView
                android:text="@string/situation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_alignBaseline="@+id/tv_situation_text"
                android:layout_alignBottom="@+id/tv_situation_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#ff000234"
                android:textSize="20dp" />

            <TextView
                android:text="@string/situation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_situation_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answers_title"
                android:id="@+id/textView4"
                android:layout_weight="0.89"
                android:textColor="#ff000234"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tv_answer1_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tv_answer2_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tv_answer3_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tv_answer4_text" />

        </LinearLayout>
    </ScrollView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</LinearLayout>
